<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvhmno1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmno1" />

    <EditText
        android:id="@+id/ethmno1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvhmno2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmno2" />

    <EditText
        android:id="@+id/ethmno2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvhmresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmresult" />

    <Button
        android:id="@+id/bthmadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmadd" />

    <Button
        android:id="@+id/bthmsubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmsubtract" />

    <Button
        android:id="@+id/bthmdivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmsubtract" />

    <Button
        android:id="@+id/bthmmultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmmultiply" />

</LinearLayout>
