<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvlogemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginemail" />

    <EditText
        android:id="@+id/etlogemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvlogpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginpassword" />

    <EditText
        android:id="@+id/etlogpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btlogsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginsubmit" />

    <Button
        android:id="@+id/btlogcancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logincancel" />

</LinearLayout>
